Center reviews CTA and fix calendar clipping

--- a/bmon-funnels/src/App.css
+++ b/bmon-funnels/src/App.css
@@ -265,7 +265,6 @@
 
 .embedFrame {
   width: 100%;
-  height: 100%;
   border: none;
   display: block;
 }
